import "MsgHead.proto";    
message MsgG2CLoginACK
{
	required uint64 account = 1;
}

message MsgG2CErrorACK
{	
	enum enResult
	{
		LG_UNKNOW				 = 0;
		LG_ALREADYLOGIN			 = 1;
		LG_YOUARENOTLOGIN		 = 2;
		LG_NOTFOUNDPLAYER        = 3;
	}
	required enResult en = 1;
}
